fix(docs): hide double scroll bar

--- a/packages/theme-patternfly-org/components/tableOfContents/tableOfContents.css
+++ b/packages/theme-patternfly-org/components/tableOfContents/tableOfContents.css
@@ -30,7 +30,7 @@
 }
 
 /* Hide TOC scrollbar Chrome, Safari & Opera */
-.ws-toc::-webkit-scrollbar {
+.ws-toc .pf-c-jump-links__main::-webkit-scrollbar {
   display: none;
 }
 
